[package]
name = "pompom"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
indicatif = "0.17.6"
kira = "0.8.4"
notify-rust = "4.8.0"
rand = "0.8.5"
serde = { version = "1.0.181", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
xdg = "2.5.2"
